--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
     Ben Fatih İstanbul'da yaşıyorum. Tarihi romanlar ve kişisel gelişim kitapları okumayı severim. 
     Şuan web geliştirme ile ilgileniyorum. Patika.dev'de frontend öğreniyorum ve öğrenmeye devam ediyorum. 
 </p>
-<h2>Sevdiğim Dizi ve Film</h2>
-<p>dizi: Game of Thrones</p>
-<p>film: Karayip Korsanları</p>
+<h1>İlgi Alanlarım</h1>
+<ol>
+    <li>Film</li>
+    <ul>
+        
+        <li> <a href="https://www.imdb.com/title/tt0325980/">Karayip Korsanları</a> </li>
+        <li>Interstellar</li>
+        <li>Dağ 1,2</li>
+    </ul>         
+    <li>Diziler</li>
+    <ul>    
+        <li><a href="https://www.imdb.com/title/tt0368479//">Cold Case</a></li>
+        <li>Game of Thrones</li>
+        <li>Silicon Valley</li>
+    </ul>   
+    <li>Kitaplar</li>                                                                                      
+    <ul>
+        <li>Abumrabum</li>
+        <li>Babilde Ölüm İstanbulda Aşk</li>
+        <li>Şah Sultan</li>
+    </ul>   
+        
+</ol>
+
+<img width="200" height="300" src="pirate.jpg" alt="Karayip Korsanları Filmi">
+<p> 
+    Karayip Korsanları, yapımcılığını Jerry Bruckheimer'ın, yönetmenliğini Gore Verbinski'nin, 
+    senaristliğini Ted Elliot ve Terry Rossio'nun yaptığı bir macera filmi serisidir. 
+    Walt Disney'de bulunan korsan parkı bu filmleri temel almıştır.
+</p>
